// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component AchievementCard renders AchievementCard correctly when awarded={false} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 516,
        "justifyContent": "flex-end",
        "marginBottom": 48,
        "width": 339,
      },
    ]
  }
>
  <Image
    opacity={0.6}
    resizeMode="contain"
    size={92}
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "height": 184,
          "justifyContent": "flex-end",
          "opacity": 0.6,
          "width": 184,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderColor": "#222222",
          "borderLeftWidth": 1,
          "height": 242,
        },
      ]
    }
  />
  <View
    isBordered={false}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F9F9",
          "borderRadius": 6,
          "bottom": 48,
          "height": 180,
          "justifyContent": "space-between",
          "marginHorizontal": 12,
          "paddingTop": 22,
          "position": "absolute",
          "width": 315,
        },
      ]
    }
  >
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#8B8B8B"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#8B8B8B",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#8B8B8B",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "paddingBottom": 6,
            "paddingTop": 7.5,
          },
        ]
      }
    >
      
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E5E5E5",
            "borderRadius": 12,
            "height": 16,
            "marginHorizontal": 12,
            "width": "70%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#72D59E",
              "borderRadius": 12,
              "height": 16,
              "position": "absolute",
              "width": "50%",
            },
          ]
        }
        widthPercentage={50}
      />
    </View>
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#8B8B8B"
      fontFamily="REGULAR"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#8B8B8B",
            "fontFamily": "CalibreRegular",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#8B8B8B",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "paddingBottom": 6,
            "paddingTop": 7.5,
          },
        ]
      }
    >
      5 more wins needed!
    </Text>
  </View>
</View>
`;

exports[`Component AchievementCard renders AchievementCard correctly when awarded={true} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "height": 516,
        "justifyContent": "flex-end",
        "marginBottom": 48,
        "width": 339,
      },
    ]
  }
>
  <Image
    opacity={1}
    resizeMode="contain"
    size={131}
    source={
      Object {
        "uri": "",
      }
    }
    style={
      Array [
        Object {
          "height": 262,
          "justifyContent": "flex-end",
          "opacity": 1,
          "width": 262,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderColor": "#222222",
          "borderLeftWidth": 1,
          "height": 242,
        },
      ]
    }
  />
  <View
    isBordered={true}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#F9F9F9",
          "borderColor": "#5EC98C",
          "borderRadius": 6,
          "borderWidth": 3,
          "bottom": 48,
          "height": 180,
          "justifyContent": "space-between",
          "marginHorizontal": 12,
          "paddingTop": 22,
          "position": "absolute",
          "width": 315,
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 18,
            "position": "absolute",
            "top": -9,
            "width": 36,
          },
        ]
      }
    />
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#222222"
      fontFamily="SEMI BOLD"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "Calibre-Semibold",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "paddingBottom": 6,
            "paddingTop": 7.5,
          },
        ]
      }
    >
      
    </Text>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#E5E5E5",
            "borderRadius": 12,
            "height": 16,
            "marginHorizontal": 12,
            "width": "70%",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#72D59E",
              "borderRadius": 12,
              "height": 16,
              "position": "absolute",
              "width": "100%",
            },
          ]
        }
        widthPercentage={100}
      />
    </View>
    <Text
      alignCenter={true}
      allowFontScaling={true}
      color="#8B8B8B"
      fontFamily="REGULAR"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XXSMALL"
      style={
        Array [
          Object {
            "color": "#8B8B8B",
            "fontFamily": "CalibreRegular",
            "fontSize": 21,
            "justifyContent": "center",
            "textAlign": "center",
            "textDecorationColor": "#8B8B8B",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
          Object {
            "paddingBottom": 6,
            "paddingTop": 7.5,
          },
        ]
      }
    >
      Earned May 14, 2019
    </Text>
  </View>
</View>
`;
